prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__append_select_compute.shortform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# clickhouse:skip\n# glaredb:skip\n# sqlite:skip\n# mysql:skip\n\n# duckdb:test\n# postgres:test\n\n# default-dialect:duckdb\n\nfrom invoices\nselect { customer_id, invoice_id, total }\ntake 5\nappend (\n  from invoice_items\n  select { invoice_line_id, invoice_id, unit_price }\n  take 5\n)\nselect { a = customer_id * 2, b = math.round 1 (invoice_id * total) }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_compute.shortform.prql
---
frames:
- - 1:132-173
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 144
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 145
      target_name: null
    - !Single
      name:
      - invoices
      - total
      target_id: 146
      target_name: null
    inputs:
    - id: 142
      name: invoices
      table:
      - default_db
      - invoices
- - 1:174-180
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 144
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 145
      target_name: null
    - !Single
      name:
      - invoices
      - total
      target_id: 146
      target_name: null
    inputs:
    - id: 142
      name: invoices
      table:
      - default_db
      - invoices
- - 1:213-263
  - columns:
    - !Single
      name:
      - invoice_items
      - invoice_line_id
      target_id: 126
      target_name: null
    - !Single
      name:
      - invoice_items
      - invoice_id
      target_id: 127
      target_name: null
    - !Single
      name:
      - invoice_items
      - unit_price
      target_id: 128
      target_name: null
    inputs:
    - id: 124
      name: invoice_items
      table:
      - default_db
      - invoice_items
- - 1:266-272
  - columns:
    - !Single
      name:
      - invoice_items
      - invoice_line_id
      target_id: 126
      target_name: null
    - !Single
      name:
      - invoice_items
      - invoice_id
      target_id: 127
      target_name: null
    - !Single
      name:
      - invoice_items
      - unit_price
      target_id: 128
      target_name: null
    inputs:
    - id: 124
      name: invoice_items
      table:
      - default_db
      - invoice_items
- - 1:181-274
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 144
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 145
      target_name: null
    - !Single
      name:
      - invoices
      - total
      target_id: 146
      target_name: null
    inputs:
    - id: 142
      name: invoices
      table:
      - default_db
      - invoices
- - 1:275-344
  - columns:
    - !Single
      name:
      - a
      target_id: 153
      target_name: null
    - !Single
      name:
      - b
      target_id: 157
      target_name: null
    inputs:
    - id: 142
      name: invoices
      table:
      - default_db
      - invoices
nodes:
- id: 124
  kind: Ident
  span: 1:192-210
  ident: !Ident
  - default_db
  - invoice_items
  parent: 130
- id: 126
  kind: Ident
  span: 1:222-237
  ident: !Ident
  - this
  - invoice_items
  - invoice_line_id
  targets:
  - 124
  parent: 129
- id: 127
  kind: Ident
  span: 1:239-249
  ident: !Ident
  - this
  - invoice_items
  - invoice_id
  targets:
  - 124
  parent: 129
- id: 128
  kind: Ident
  span: 1:251-261
  ident: !Ident
  - this
  - invoice_items
  - unit_price
  targets:
  - 124
  parent: 129
- id: 129
  kind: Tuple
  span: 1:220-263
  children:
  - 126
  - 127
  - 128
  parent: 130
- id: 130
  kind: 'TransformCall: Select'
  span: 1:213-263
  children:
  - 124
  - 129
  parent: 132
- id: 132
  kind: 'TransformCall: Take'
  span: 1:266-272
  children:
  - 130
  - 133
  parent: 152
- id: 133
  kind: Literal
  parent: 132
- id: 142
  kind: Ident
  span: 1:118-131
  ident: !Ident
  - default_db
  - invoices
  parent: 148
- id: 144
  kind: Ident
  span: 1:141-152
  ident: !Ident
  - this
  - invoices
  - customer_id
  targets:
  - 142
  parent: 147
- id: 145
  kind: Ident
  span: 1:154-164
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 142
  parent: 147
- id: 146
  kind: Ident
  span: 1:166-171
  ident: !Ident
  - this
  - invoices
  - total
  targets:
  - 142
  parent: 147
- id: 147
  kind: Tuple
  span: 1:139-173
  children:
  - 144
  - 145
  - 146
  parent: 148
- id: 148
  kind: 'TransformCall: Select'
  span: 1:132-173
  children:
  - 142
  - 147
  parent: 150
- id: 150
  kind: 'TransformCall: Take'
  span: 1:174-180
  children:
  - 148
  - 151
  parent: 152
- id: 151
  kind: Literal
  parent: 150
- id: 152
  kind: 'TransformCall: Append'
  span: 1:181-274
  children:
  - 150
  - 132
  parent: 165
- id: 153
  kind: RqOperator
  span: 1:288-303
  alias: a
  targets:
  - 155
  - 156
  parent: 164
- id: 155
  kind: Ident
  span: 1:288-299
  ident: !Ident
  - this
  - invoices
  - customer_id
  targets:
  - 144
- id: 156
  kind: Literal
  span: 1:302-303
- id: 157
  kind: RqOperator
  span: 1:309-342
  alias: b
  targets:
  - 159
  - 160
  parent: 164
- id: 159
  kind: Literal
  span: 1:320-321
- id: 160
  kind: RqOperator
  span: 1:323-341
  targets:
  - 162
  - 163
- id: 162
  kind: Ident
  span: 1:323-333
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 145
- id: 163
  kind: Ident
  span: 1:336-341
  ident: !Ident
  - this
  - invoices
  - total
  targets:
  - 146
- id: 164
  kind: Tuple
  span: 1:282-344
  children:
  - 153
  - 157
  parent: 165
- id: 165
  kind: 'TransformCall: Select'
  span: 1:275-344
  children:
  - 152
  - 164
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:118-122
              args:
              - Ident:
                - invoices
                span: 1:123-131
            span: 1:118-131
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:132-138
              args:
              - Tuple:
                - Ident:
                  - customer_id
                  span: 1:141-152
                - Ident:
                  - invoice_id
                  span: 1:154-164
                - Ident:
                  - total
                  span: 1:166-171
                span: 1:139-173
            span: 1:132-173
          - FuncCall:
              name:
                Ident:
                - take
                span: 1:174-178
              args:
              - Literal:
                  Integer: 5
                span: 1:179-180
            span: 1:174-180
          - FuncCall:
              name:
                Ident:
                - append
                span: 1:181-187
              args:
              - Pipeline:
                  exprs:
                  - FuncCall:
                      name:
                        Ident:
                        - from
                        span: 1:192-196
                      args:
                      - Ident:
                        - invoice_items
                        span: 1:197-210
                    span: 1:192-210
                  - FuncCall:
                      name:
                        Ident:
                        - select
                        span: 1:213-219
                      args:
                      - Tuple:
                        - Ident:
                          - invoice_line_id
                          span: 1:222-237
                        - Ident:
                          - invoice_id
                          span: 1:239-249
                        - Ident:
                          - unit_price
                          span: 1:251-261
                        span: 1:220-263
                    span: 1:213-263
                  - FuncCall:
                      name:
                        Ident:
                        - take
                        span: 1:266-270
                      args:
                      - Literal:
                          Integer: 5
                        span: 1:271-272
                    span: 1:266-272
                span: 1:192-272
            span: 1:181-274
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:275-281
              args:
              - Tuple:
                - Binary:
                    left:
                      Ident:
                      - customer_id
                      span: 1:288-299
                    op: Mul
                    right:
                      Literal:
                        Integer: 2
                      span: 1:302-303
                  span: 1:288-303
                  alias: a
                - FuncCall:
                    name:
                      Ident:
                      - math
                      - round
                      span: 1:309-319
                    args:
                    - Literal:
                        Integer: 1
                      span: 1:320-321
                    - Binary:
                        left:
                          Ident:
                          - invoice_id
                          span: 1:323-333
                        op: Mul
                        right:
                          Ident:
                          - total
                          span: 1:336-341
                      span: 1:323-341
                  span: 1:309-342
                  alias: b
                span: 1:282-344
            span: 1:275-344
        span: 1:118-344
    span: 1:0-344
