prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__append_select_multiple_with_null.longform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# duckdb:skip\n# postgres:skip\n\nfrom invoices\nselect { customer_id, invoice_id, billing_country }\ntake 5\nappend (\n  from employees\n  select { employee_id, employee_id, country }\n  take 5\n)\nappend (\n  from invoice_items\n  select { invoice_line_id, invoice_id, null }\n  take 5\n)\nselect { billing_country, invoice_id }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_multiple_with_null.longform.prql
---
frames:
- - 1:45-96
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 165
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 166
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 167
      target_name: null
    inputs:
    - id: 163
      name: invoices
      table:
      - default_db
      - invoices
- - 1:97-103
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 165
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 166
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 167
      target_name: null
    inputs:
    - id: 163
      name: invoices
      table:
      - default_db
      - invoices
- - 1:132-176
  - columns:
    - !Single
      name: null
      target_id: 147
      target_name: null
    - !Single
      name:
      - employees
      - employee_id
      target_id: 148
      target_name: null
    - !Single
      name:
      - employees
      - country
      target_id: 149
      target_name: null
    inputs:
    - id: 145
      name: employees
      table:
      - default_db
      - employees
- - 1:179-185
  - columns:
    - !Single
      name: null
      target_id: 147
      target_name: null
    - !Single
      name:
      - employees
      - employee_id
      target_id: 148
      target_name: null
    - !Single
      name:
      - employees
      - country
      target_id: 149
      target_name: null
    inputs:
    - id: 145
      name: employees
      table:
      - default_db
      - employees
- - 1:104-187
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 165
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 166
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 167
      target_name: null
    inputs:
    - id: 163
      name: invoices
      table:
      - default_db
      - invoices
- - 1:220-264
  - columns:
    - !Single
      name:
      - invoice_items
      - invoice_line_id
      target_id: 126
      target_name: null
    - !Single
      name:
      - invoice_items
      - invoice_id
      target_id: 127
      target_name: null
    - !Single
      name: null
      target_id: 128
      target_name: null
    inputs:
    - id: 124
      name: invoice_items
      table:
      - default_db
      - invoice_items
- - 1:267-273
  - columns:
    - !Single
      name:
      - invoice_items
      - invoice_line_id
      target_id: 126
      target_name: null
    - !Single
      name:
      - invoice_items
      - invoice_id
      target_id: 127
      target_name: null
    - !Single
      name: null
      target_id: 128
      target_name: null
    inputs:
    - id: 124
      name: invoice_items
      table:
      - default_db
      - invoice_items
- - 1:188-275
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 165
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 166
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 167
      target_name: null
    inputs:
    - id: 163
      name: invoices
      table:
      - default_db
      - invoices
- - 1:276-314
  - columns:
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 175
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 176
      target_name: null
    inputs:
    - id: 163
      name: invoices
      table:
      - default_db
      - invoices
nodes:
- id: 124
  kind: Ident
  span: 1:199-217
  ident: !Ident
  - default_db
  - invoice_items
  parent: 130
- id: 126
  kind: Ident
  span: 1:229-244
  ident: !Ident
  - this
  - invoice_items
  - invoice_line_id
  targets:
  - 124
  parent: 129
- id: 127
  kind: Ident
  span: 1:246-256
  ident: !Ident
  - this
  - invoice_items
  - invoice_id
  targets:
  - 124
  parent: 129
- id: 128
  kind: Literal
  span: 1:258-262
  parent: 129
- id: 129
  kind: Tuple
  span: 1:227-264
  children:
  - 126
  - 127
  - 128
  parent: 130
- id: 130
  kind: 'TransformCall: Select'
  span: 1:220-264
  children:
  - 124
  - 129
  parent: 132
- id: 132
  kind: 'TransformCall: Take'
  span: 1:267-273
  children:
  - 130
  - 133
  parent: 174
- id: 133
  kind: Literal
  parent: 132
- id: 145
  kind: Ident
  span: 1:115-129
  ident: !Ident
  - default_db
  - employees
  parent: 151
- id: 147
  kind: Ident
  span: 1:141-152
  ident: !Ident
  - this
  - employees
  - employee_id
  targets:
  - 145
  parent: 150
- id: 148
  kind: Ident
  span: 1:154-165
  ident: !Ident
  - this
  - employees
  - employee_id
  targets:
  - 145
  parent: 150
- id: 149
  kind: Ident
  span: 1:167-174
  ident: !Ident
  - this
  - employees
  - country
  targets:
  - 145
  parent: 150
- id: 150
  kind: Tuple
  span: 1:139-176
  children:
  - 147
  - 148
  - 149
  parent: 151
- id: 151
  kind: 'TransformCall: Select'
  span: 1:132-176
  children:
  - 145
  - 150
  parent: 153
- id: 153
  kind: 'TransformCall: Take'
  span: 1:179-185
  children:
  - 151
  - 154
  parent: 173
- id: 154
  kind: Literal
  parent: 153
- id: 163
  kind: Ident
  span: 1:31-44
  ident: !Ident
  - default_db
  - invoices
  parent: 169
- id: 165
  kind: Ident
  span: 1:54-65
  ident: !Ident
  - this
  - invoices
  - customer_id
  targets:
  - 163
  parent: 168
- id: 166
  kind: Ident
  span: 1:67-77
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 163
  parent: 168
- id: 167
  kind: Ident
  span: 1:79-94
  ident: !Ident
  - this
  - invoices
  - billing_country
  targets:
  - 163
  parent: 168
- id: 168
  kind: Tuple
  span: 1:52-96
  children:
  - 165
  - 166
  - 167
  parent: 169
- id: 169
  kind: 'TransformCall: Select'
  span: 1:45-96
  children:
  - 163
  - 168
  parent: 171
- id: 171
  kind: 'TransformCall: Take'
  span: 1:97-103
  children:
  - 169
  - 172
  parent: 173
- id: 172
  kind: Literal
  parent: 171
- id: 173
  kind: 'TransformCall: Append'
  span: 1:104-187
  children:
  - 171
  - 153
  parent: 174
- id: 174
  kind: 'TransformCall: Append'
  span: 1:188-275
  children:
  - 173
  - 132
  parent: 178
- id: 175
  kind: Ident
  span: 1:285-300
  ident: !Ident
  - this
  - invoices
  - billing_country
  targets:
  - 167
  parent: 177
- id: 176
  kind: Ident
  span: 1:302-312
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 166
  parent: 177
- id: 177
  kind: Tuple
  span: 1:283-314
  children:
  - 175
  - 176
  parent: 178
- id: 178
  kind: 'TransformCall: Select'
  span: 1:276-314
  children:
  - 174
  - 177
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:31-35
              args:
              - Ident:
                - invoices
                span: 1:36-44
            span: 1:31-44
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:45-51
              args:
              - Tuple:
                - Ident:
                  - customer_id
                  span: 1:54-65
                - Ident:
                  - invoice_id
                  span: 1:67-77
                - Ident:
                  - billing_country
                  span: 1:79-94
                span: 1:52-96
            span: 1:45-96
          - FuncCall:
              name:
                Ident:
                - take
                span: 1:97-101
              args:
              - Literal:
                  Integer: 5
                span: 1:102-103
            span: 1:97-103
          - FuncCall:
              name:
                Ident:
                - append
                span: 1:104-110
              args:
              - Pipeline:
                  exprs:
                  - FuncCall:
                      name:
                        Ident:
                        - from
                        span: 1:115-119
                      args:
                      - Ident:
                        - employees
                        span: 1:120-129
                    span: 1:115-129
                  - FuncCall:
                      name:
                        Ident:
                        - select
                        span: 1:132-138
                      args:
                      - Tuple:
                        - Ident:
                          - employee_id
                          span: 1:141-152
                        - Ident:
                          - employee_id
                          span: 1:154-165
                        - Ident:
                          - country
                          span: 1:167-174
                        span: 1:139-176
                    span: 1:132-176
                  - FuncCall:
                      name:
                        Ident:
                        - take
                        span: 1:179-183
                      args:
                      - Literal:
                          Integer: 5
                        span: 1:184-185
                    span: 1:179-185
                span: 1:115-185
            span: 1:104-187
          - FuncCall:
              name:
                Ident:
                - append
                span: 1:188-194
              args:
              - Pipeline:
                  exprs:
                  - FuncCall:
                      name:
                        Ident:
                        - from
                        span: 1:199-203
                      args:
                      - Ident:
                        - invoice_items
                        span: 1:204-217
                    span: 1:199-217
                  - FuncCall:
                      name:
                        Ident:
                        - select
                        span: 1:220-226
                      args:
                      - Tuple:
                        - Ident:
                          - invoice_line_id
                          span: 1:229-244
                        - Ident:
                          - invoice_id
                          span: 1:246-256
                        - Literal: 'Null'
                          span: 1:258-262
                        span: 1:227-264
                    span: 1:220-264
                  - FuncCall:
                      name:
                        Ident:
                        - take
                        span: 1:267-271
                      args:
                      - Literal:
                          Integer: 5
                        span: 1:272-273
                    span: 1:267-273
                span: 1:199-273
            span: 1:188-275
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:276-282
              args:
              - Tuple:
                - Ident:
                  - billing_country
                  span: 1:285-300
                - Ident:
                  - invoice_id
                  span: 1:302-312
                span: 1:283-314
            span: 1:276-314
        span: 1:31-314
    span: 1:0-314
